kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/Swarm_Message__c.object-meta.xml
<CustomObject>
    <description>Slack 対策室チャンネルのメッセージ (TEPCO Vision Demo)</description>
    <label>対策室メッセージ</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>メッセージ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>対策室メッセージ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>