kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <label>アラート</label>
    <referenceTo>Substation_Alert__c</referenceTo>
    <relationshipLabel>対策室メッセージ</relationshipLabel>
    <relationshipName>Swarm_Messages</relationshipName>
    <type>MasterDetail</type>
</CustomField>