kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Attachment_Body__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Body__c</fullName>
    <label>添付本文</label>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>