kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Attachment_Title__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Title__c</fullName>
    <label>添付タイトル</label>
    <length>200</length>
    <type>Text</type>
</CustomField>