kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>本文</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>