kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Sender_Role__c.field-meta.xml
<CustomField>
    <fullName>Sender_Role__c</fullName>
    <label>役職・部署</label>
    <length>120</length>
    <type>Text</type>
</CustomField>