kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Swarm_Message__c/fields/Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>Sender_Type__c</fullName>
    <label>送信者タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Human</fullName><default>true</default><label>Human</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
            <value><fullName>Tableau</fullName><default>false</default><label>Tableau Bot</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>